[package]
name = "rust-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { "version" = "2.0.3", features = ["postgres", "extras"] }
uuid = { "version" = "0.8.2", features = ["v4"] }
dotenvy = "0.15"
serde = { "version" = "1.0.158", features = ["derive"] }
serde_json = "1.0.95"
chrono = { "version" = "0.4.24", features = ["serde"] }

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]
