[package]
name = "rust-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
uuid = { "version" = "0.8.2", features = ["v4"] }
dotenvy = "0.15"
serde = { "version" = "1.0.158", features = ["derive"] }
serde_json = "1.0.95"
chrono = { "version" = "0.4.24", features = ["serde"] }
sqlx = { "version" = "0.6.3", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "json",
    "chrono",
    "uuid",
] }
